--- a/shoe.html
+++ b/shoe.html
@@ -1,7 +1,5 @@
 <!doctype html>
 <html>
     <head><title>My first website</title></head>
-    <body>
-        I am Shubham.
-    </body>
+    <body style="text-align:center;">    </body>
 </html>
