--- a/shoe.html
+++ b/shoe.html
@@ -1,5 +1,5 @@
 <!doctype html>
 <html>
     <head><title>My first website</title></head>
-    <body style="text-align:center;">    </body>
+    <body style="text-align:center;"> this is a new website    </body>
 </html>
