--- a/shu.html
+++ b/shu.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
     <head><title>My first website</title></head>
-    <body style="text-align:center; color:blue; background-color:orange;"> this is a new website   
+    <body style="text-align:center; color:blue; background-color:orange;"> this is a new website   <br>
         <img src="Shiva samarth.png">
     </body>
 </html>
