--- a/shu.html
+++ b/shu.html
@@ -2,6 +2,7 @@
 <html>
     <head><title>My first website</title></head>
     <body style="text-align:center; color:blue; background-color:orange; font-size:33px;"> this is a new website   <br>
-        <img src="Shiva samarth.png">
+        <img src="Shiva samarth.png" width="100px">
+       
     </body>
 </html>
