--- a/shu.html
+++ b/shu.html
@@ -1,9 +1,15 @@
 <!doctype html>
 <html>
     <head><title>My first website</title></head>
-    <body style="text-align:center; color:blue; background-color:orange; font-size:33px;"> this is a new website   <br>
-        <img src="Shiva samarth.png" width="100px"><br>
-        <a  href="https://youtu.be/A4WtNekrRD0">T</a>
-       
+    <body > this is a new website   <br>
+        <div>
+
+        <img src="Shiva samarth.png" width="100px"><br> </div>
+        <a  href="https://youtu.be/A4WtNekrRD0" target="_blank">T </a>
+        <style>
+        div{ 
+            text-align:center; color:blue; background-color:orange; font-size:33px;margin: auto;
+        } 
+        </style>
     </body>
 </html>
